libs/slim/test/typecheck/fail/swizzle_range.shader
property vec3 foo;

shader vertex {
    foo.rgba;
    return vec4(0.0, 0.0, 0.0, 1.0);
}
